# chess

./: CMakeLists.txt  README.md
include/: Chessboard.h  Figure.h  FigureFactory.h  Game.h  PathSystem.h  Point.h  Saver.h  ViewSide.h
src/: CMakeLists.txt  Chessboard.cpp  Figure.cpp  FigureFactory.cpp  Game.cpp  PathSystem.cpp  Point.cpp  Saver.cpp  ViewSide.cpp  main.cpp
tests/: CMakeLists.txt  test-King-Path.cpp  test-Pawn-Path.cpp  testCheckboard.cpp  testFigureFactory.cpp  testPoint.cpp
tests/googletest/googletest/include/gtest/: gtest.h
tests/googletest/googletest/include/gtest/internal/: gtest-port.h
